standard and reverse flow sequence

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -9,9 +9,9 @@
       <app-timer></app-timer>
       <app-media-controls></app-media-controls>
     </div>
-    <!-- <div class="right">
+    <div class="right">
       <app-flow-sequence-details></app-flow-sequence-details>
-    </div> -->
+    </div>
   </div>
 
   } @else {<app-welcome></app-welcome>}
