--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -9,14 +9,14 @@
       [btnAction]="'Start'"
       [btnName]="'Standard'"
       [btnType]="'Flow Sequence'"
-      (buttonClicked)="startStandardTimer()"
+      (buttonClicked)="startStandardSequence()"
     ></app-glass-button>
 
     <app-glass-button
       [btnAction]="'Start'"
       [btnName]="'Reverse'"
       [btnType]="'Flow Sequence'"
-      (buttonClicked)="startStandardReverse()"
+      (buttonClicked)="startReverseSequence()"
     ></app-glass-button>
 
     <app-glass-button
