settings themes component

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -181,6 +181,8 @@
     <app-settings-general></app-settings-general>
     } @else if (settingsService.activeTab === "timers") {
     <app-settings-custom-timers></app-settings-custom-timers>
+    } @else if (settingsService.activeTab === "themes") {
+    <app-settings-themes></app-settings-themes>
     }
   </div>
 </section>
