--- a/src/app/settings/components/settings-themes/settings-themes.component.html
+++ b/src/app/settings/components/settings-themes/settings-themes.component.html
@@ -9,7 +9,7 @@
     <mat-form-field appearance="outline" subscriptSizing="dynamic">
       <mat-label>Select</mat-label>
       <mat-select>
-        <mat-option value="one">First option</mat-option>
+        <mat-option value="one">Monstera</mat-option>
         <mat-option value="two">Second option</mat-option>
       </mat-select>
     </mat-form-field>
