--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,4 +1,8 @@
-<main style="background-image: url('assets/img/backgrounds/background-1.webp')">
+<main
+  [style.background-image]="
+    'url(' + settingsService.activeTheme.backgroundImage + ')'
+  "
+>
   @if (settingsService.settingsOpen) {
   <app-settings-overlay></app-settings-overlay>}
 
