--- a/src/app/home/components/media-controls/media-controls.component.html
+++ b/src/app/home/components/media-controls/media-controls.component.html
@@ -1,6 +1,8 @@
 <section>
   <svg
     (click)="previous()"
+    (mouseenter)="setHoverd(true, 'previous')"
+    (mouseleave)="setHoverd(false, 'previous')"
     class="chapter-img"
     width="23"
     height="26"
@@ -10,10 +12,22 @@
   >
     <g id="Group">
       <g id="Vector">
-        <path d="M1 4.25684V21.7451V4.25684Z" fill="white" fill-opacity="0.8" />
+        <path
+          [attr.fill]="
+            hoveredElement === 'previous'
+              ? settingsService.activeTheme.accentColor
+              : 'white'
+          "
+          d="M1 4.25684V21.7451V4.25684Z"
+          fill-opacity="0.8"
+        />
         <path
           d="M1 4.25684V21.7451"
-          stroke="white"
+          [attr.stroke]="
+            hoveredElement === 'previous'
+              ? settingsService.activeTheme.accentColor
+              : 'white'
+          "
           stroke-opacity="0.8"
           stroke-linecap="round"
           stroke-linejoin="round"
@@ -22,9 +36,17 @@
       <path
         id="Vector_2"
         d="M20.2964 1.22602C20.4511 1.10378 20.6373 1.0276 20.8334 1.0062C21.0295 0.9848 21.2277 1.01905 21.4052 1.10502C21.5828 1.19099 21.7325 1.32521 21.8372 1.49229C21.9419 1.65938 21.9974 1.85256 21.9974 2.04972V23.952C21.9971 24.149 21.9414 24.342 21.8365 24.5088C21.7317 24.6756 21.5819 24.8096 21.4044 24.8954C21.227 24.9811 21.0289 25.0152 20.833 24.9938C20.637 24.9723 20.451 24.8961 20.2964 24.774L6.41711 13.8246C6.29257 13.7264 6.19192 13.6012 6.12273 13.4586C6.05353 13.3159 6.01758 13.1594 6.01758 13.0009C6.01758 12.8423 6.05353 12.6859 6.12273 12.5432C6.19192 12.4005 6.29257 12.2754 6.41711 12.1772L20.2964 1.22602Z"
-        fill="white"
+        [attr.fill]="
+          hoveredElement === 'previous'
+            ? settingsService.activeTheme.accentColor
+            : 'white'
+        "
+        [attr.stroke]="
+          hoveredElement === 'previous'
+            ? settingsService.activeTheme.accentColor
+            : 'white'
+        "
         fill-opacity="0.8"
-        stroke="white"
         stroke-opacity="0.8"
         stroke-linecap="round"
         stroke-linejoin="round"
@@ -35,6 +57,8 @@
   @if (playButton) {
   <svg
     (click)="play()"
+    (mouseenter)="setHoverd(true, 'play')"
+    (mouseleave)="setHoverd(false, 'play')"
     class="play-pause"
     width="22"
     height="26"
@@ -45,9 +69,17 @@
     <path
       id="icon Start flow sequence"
       d="M2.40217 1.1334C2.26119 1.04752 2.10059 1.00151 1.9367 1.00004C1.77281 0.998566 1.61145 1.04169 1.46903 1.12503C1.32661 1.20836 1.2082 1.32894 1.12582 1.47452C1.04344 1.62009 1.00003 1.78548 1 1.95387V24.0461C1.00003 24.2145 1.04344 24.3799 1.12582 24.5255C1.2082 24.6711 1.32661 24.7916 1.46903 24.875C1.61145 24.9583 1.77281 25.0014 1.9367 25C2.10059 24.9985 2.26119 24.9525 2.40217 24.8666L20.5453 13.8205C20.6838 13.736 20.7986 13.6159 20.8783 13.4721C20.9581 13.3282 21 13.1655 21 13C21 12.8345 20.9581 12.6718 20.8783 12.5279C20.7986 12.3841 20.6838 12.264 20.5453 12.1795L2.40217 1.1334Z"
-      fill="white"
+      [attr.fill]="
+        hoveredElement === 'play'
+          ? settingsService.activeTheme.accentColor
+          : 'white'
+      "
+      [attr.stroke]="
+        hoveredElement === 'play'
+          ? settingsService.activeTheme.accentColor
+          : 'white'
+      "
       fill-opacity="0.90"
-      stroke="white"
       stroke-opacity="0.80"
       stroke-width="0.75"
       stroke-linecap="round"
@@ -57,6 +89,8 @@
   }@else {
   <svg
     (click)="pause()"
+    (mouseenter)="setHoverd(true, 'pause')"
+    (mouseleave)="setHoverd(false, 'pause')"
     class="play-pause"
     width="23"
     height="26"
@@ -67,9 +101,17 @@
     <path
       id="icon Pause flow sequence"
       d="M0.998047 23.9714V2.02857C0.998047 1.75578 1.10867 1.49416 1.30558 1.30126C1.5025 1.10837 1.76957 1 2.04805 1H6.94805C7.22652 1 7.4936 1.10837 7.69051 1.30126C7.88742 1.49416 7.99805 1.75578 7.99805 2.02857V23.9714C7.99805 24.2442 7.88742 24.5058 7.69051 24.6987C7.4936 24.8916 7.22652 25 6.94805 25H2.04805C1.76957 25 1.5025 24.8916 1.30558 24.6987C1.10867 24.5058 0.998047 24.2442 0.998047 23.9714ZM14.998 23.9714V2.02857C14.998 1.75578 15.1087 1.49416 15.3056 1.30126C15.5025 1.10837 15.7696 1 16.048 1H20.948C21.2265 1 21.4936 1.10837 21.6905 1.30126C21.8874 1.49416 21.998 1.75578 21.998 2.02857V23.9714C21.998 24.2442 21.8874 24.5058 21.6905 24.6987C21.4936 24.8916 21.2265 25 20.948 25H16.048C15.7696 25 15.5025 24.8916 15.3056 24.6987C15.1087 24.5058 14.998 24.2442 14.998 23.9714Z"
-      fill="white"
+      [attr.fill]="
+        hoveredElement === 'pause'
+          ? settingsService.activeTheme.accentColor
+          : 'white'
+      "
+      [attr.stroke]="
+        hoveredElement === 'pause'
+          ? settingsService.activeTheme.accentColor
+          : 'white'
+      "
       fill-opacity="0.9"
-      stroke="white"
       stroke-opacity="0.8"
       stroke-width="0.75"
     />
@@ -78,6 +120,8 @@
 
   <svg
     (click)="next()"
+    (mouseenter)="setHoverd(true, 'next')"
+    (mouseleave)="setHoverd(false, 'next')"
     class="chapter-img"
     width="23"
     height="26"
@@ -89,12 +133,20 @@
       <g id="Vector">
         <path
           d="M21.998 4.25684V21.7451V4.25684Z"
-          fill="white"
+          [attr.fill]="
+            hoveredElement === 'next'
+              ? settingsService.activeTheme.accentColor
+              : 'white'
+          "
           fill-opacity="0.8"
         />
         <path
           d="M21.998 4.25684V21.7451"
-          stroke="white"
+          [attr.stroke]="
+            hoveredElement === 'next'
+              ? settingsService.activeTheme.accentColor
+              : 'white'
+          "
           stroke-opacity="0.8"
           stroke-linecap="round"
           stroke-linejoin="round"
@@ -103,9 +155,17 @@
       <path
         id="Vector_2"
         d="M2.69905 1.22602C2.54426 1.10378 2.35814 1.0276 2.16202 1.0062C1.9659 0.9848 1.76771 1.01905 1.59017 1.10502C1.41263 1.19099 1.26292 1.32521 1.1582 1.49229C1.05347 1.65938 0.997968 1.85256 0.998047 2.04972V23.952C0.998297 24.149 1.05404 24.342 1.1589 24.5088C1.26375 24.6756 1.41348 24.8096 1.59096 24.8954C1.76844 24.9811 1.96649 25.0152 2.16245 24.9938C2.35842 24.9723 2.54437 24.8961 2.69905 24.774L16.5783 13.8246C16.7028 13.7264 16.8035 13.6012 16.8727 13.4586C16.9419 13.3159 16.9778 13.1594 16.9778 13.0009C16.9778 12.8423 16.9419 12.6859 16.8727 12.5432C16.8035 12.4005 16.7028 12.2754 16.5783 12.1772L2.69905 1.22602Z"
-        fill="white"
+        [attr.fill]="
+          hoveredElement === 'next'
+            ? settingsService.activeTheme.accentColor
+            : 'white'
+        "
+        [attr.stroke]="
+          hoveredElement === 'next'
+            ? settingsService.activeTheme.accentColor
+            : 'white'
+        "
         fill-opacity="0.8"
-        stroke="white"
         stroke-opacity="0.8"
         stroke-linecap="round"
         stroke-linejoin="round"
