--- a/src/app/home/components/timer/timer.component.html
+++ b/src/app/home/components/timer/timer.component.html
@@ -15,7 +15,8 @@
     <div
       [ngStyle]="{
         width:
-          (this.flowSequenceService.secondsOfMinuteRemainung / 60) * 100 + '%'
+          (this.flowSequenceService.secondsOfMinuteRemainung / 60) * 100 + '%',
+        'background-color': settingsService.activeTheme.accentColor
       }"
       class="bar"
       [ngClass]="{
