apply theme gradient color

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -3,6 +3,25 @@
     'url(' + settingsService.activeTheme.backgroundImage + ')'
   "
 >
+  <div
+    [ngStyle]="{
+      background:
+        'linear-gradient(180deg,' +
+        settingsService.activeTheme.gradientColor +
+        ', rgba(12, 23, 19, 0) 100%)'
+    }"
+    class="gradient-top"
+  ></div>
+  <div
+    [ngStyle]="{
+      background:
+        'linear-gradient(0deg,' +
+        settingsService.activeTheme.gradientColor +
+        ', rgba(12, 23, 19, 0) 100%)'
+    }"
+    class="gradient-bottom"
+  ></div>
+
   @if (settingsService.settingsOpen) {
   <app-settings-overlay></app-settings-overlay>}
 
