--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -13,13 +13,23 @@ main {
   transition: opacity 0.5s ease-in-out;
 }
 
-// main.fade-out {
-//   opacity: 0;
-// }
+.gradient-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 33vh;
+  height: 33svh;
+}
 
-// main.fade-in {
-//   opacity: 1;
-// }
+.gradient-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 33vh;
+  height: 33svh;
+}
 
 .timer-active {
   @include dFlex($gp: 12px, $ai: flex-start);
