sound settings component

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -183,6 +183,8 @@
     <app-settings-custom-timers></app-settings-custom-timers>
     } @else if (settingsService.activeTab === "themes") {
     <app-settings-themes></app-settings-themes>
+    }@else if (settingsService.activeTab === 'sounds') {
+    <app-settings-sound></app-settings-sound>
     }
   </div>
 </section>
