--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -20,6 +20,7 @@ main {
   right: 0;
   height: 33vh;
   height: 33svh;
+  pointer-events: none;
 }
 
 .gradient-bottom {
@@ -29,6 +30,7 @@ main {
   right: 0;
   height: 33vh;
   height: 33svh;
+  pointer-events: none;
 }
 
 .timer-active {
