--- a/src/app/settings/components/settings-sound/settings-sound.component.scss
+++ b/src/app/settings/components/settings-sound/settings-sound.component.scss
@@ -7,6 +7,8 @@ section {
   width: 100%;
   flex-grow: 1;
   overflow: auto;
+
+  color: $copy-light;
 }
 
 .headline {
@@ -21,4 +23,54 @@ section {
     font-size: 24px;
     color: $copy-light;
   }
+}
+
+.select-sounds-wrapper {
+  @include dFlex($gp: 24px);
+  flex-direction: column;
+
+  > p {
+    text-align: center;
+    max-width: 450px;
+  }
+}
+
+.drag-wrapper {
+  width: 100%;
+  @include dFlex($ai: flex-start, $jc: space-between);
+
+  .drag-left {
+    @include dFlex($gp: 16px, $ai: flex-start);
+    flex-direction: column;
+  }
+
+  .drag-right {
+    @include dFlex($gp: 16px, $ai: flex-start);
+    flex-direction: column;
+  }
+}
+
+.drag-area {
+  @include dFlex($gp: 8px, $jc: flex-start);
+  max-width: 300px;
+  flex-wrap: wrap;
+}
+
+.dropArea {
+  height: 35px;
+  width: 100px;
+  background-color: aquamarine;
+
+  .cdk-drag-placeholder {
+    opacity: 0;
+  }
+}
+
+.sound-item {
+  position: relative;
+  @include dFlex();
+  background-color: $interface-accent-2;
+  border-radius: 4px;
+  padding: 8px 16px;
+  cursor: pointer;
 }
