--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,13 +1,13 @@
 <main
   [style.background-image]="
-    'url(' + settingsService.activeTheme.backgroundImage + ')'
+    'url(' + settingsService.appSettings.theme.backgroundImage + ')'
   "
 >
   <div
     [ngStyle]="{
       background:
         'linear-gradient(180deg,' +
-        settingsService.activeTheme.gradientColor +
+        settingsService.appSettings.theme.gradientColor +
         ', rgba(12, 23, 19, 0) 100%)'
     }"
     class="gradient-top"
@@ -16,7 +16,7 @@
     [ngStyle]="{
       background:
         'linear-gradient(0deg,' +
-        settingsService.activeTheme.gradientColor +
+        settingsService.appSettings.theme.gradientColor +
         ', rgba(12, 23, 19, 0) 100%)'
     }"
     class="gradient-bottom"
