save sound settings in app-settings

--- a/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
+++ b/src/app/home/components/flow-sequence-details/flow-sequence-details.component.scss
@@ -44,7 +44,7 @@ section {
   }
 
   .bottom-container {
-    @include dFlex($gp: 16px, $ai: flex-end);
+    @include dFlex($gp: 16px);
     width: 100%;
 
     .progress-container {
