save and load custom timers in app-settings

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -40,7 +40,8 @@
     class="saved-custom-timers-box"
     (cdkDropListDropped)="drop($event)"
   >
-    @for (sequence of settingsService.savedCustomSequences; track $index) {
+    @for (sequence of settingsService.appSettings.customSequences; track $index)
+    {
     <div class="sequence-card" cdkDrag>
       <div>
         <img src="assets\img\icons\dots.svg" alt="drag" />
