add flowtime button content fix

--- a/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
+++ b/src/app/settings/components/settings-custom-timers/settings-custom-timers.component.html
@@ -117,7 +117,7 @@
           <input matInput [(ngModel)]="shortBreakDuration" placeholder="Min" />
         </mat-form-field>
         <app-simple-settings-button
-          [content]="'Flow Time'"
+          [content]="'Short Break'"
           (submitEvent)="addShortBreak()"
         ></app-simple-settings-button>
       </div>
@@ -128,7 +128,7 @@
           <input matInput [(ngModel)]="longBreakDuration" placeholder="Min" />
         </mat-form-field>
         <app-simple-settings-button
-          [content]="'Flow Time'"
+          [content]="'Long Break'"
           (submitEvent)="addLongBreak()"
         ></app-simple-settings-button>
       </div>
